Add - header bg image

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </div>
     </nav>
 
-    <header class="container">
-        <div class="header-sec">
+    <header>
+        <div class="container header-sec">
             <h1>Blog</h1>
             <button class="btn btn-search">
                 <i class="lni lni-search-alt icon-search"></i>
