Add - Featured section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,22 @@
         </div>
     </header>
 
+
+    <section class="featured">
+        <div class="feature-image">
+            <span class="feature-tag">SPORTS</span>
+        </div>
+
+        <div class="feature-info container">
+            <h3>Featured</h3>
+            <h2>How to Reach Highly Engaged Sports Audiences</h2>
+
+            <p>As soon as I've mastered on thing, something else has comes along, forcing me to start fresh with a whole new series of tricks and skills.</p>
+
+            <a class='btn-link' href="#">More <i class="lni lni-arrow-right"></i></a>
+        </div>
+    </section>
+
 </body>
 
 </html>
