--- a/index.html
+++ b/index.html
@@ -39,11 +39,45 @@
             <h3>Featured</h3>
             <h2>How to Reach Highly Engaged Sports Audiences</h2>
 
-            <p>As soon as I've mastered on thing, something else has comes along, forcing me to start fresh with a whole new series of tricks and skills.</p>
+            <p class="para">As soon as I've mastered on thing, something else has comes along, forcing me to start fresh with a whole new series of tricks and skills.</p>
 
             <a class='btn-link' href="#">More <i class="lni lni-arrow-right"></i></a>
         </div>
     </section>
+
+    <main>
+        <div class="container blog-cards">
+            <div class="blog-card">
+                <div class="card-image">
+                    <img src="./assets/bgimage10.png" alt="">
+                    <span class="feature-tag card-tag">SPORTS</span>
+                </div>
+                <div class="card-info">
+                    <h2 class="card-title">How to Reach Highly Engaged Sports Audiences</h2>
+
+                    <p class="para">As soon as I've mastered one thing, something else has comes along, forcing me to start fresh with a while new series of tricks and skills.</p>
+
+                    <a class="btn-link" href="">More <i class="lni lni-arrow-right"></i></a>
+                </div>
+            </div>
+
+            <div class="blog-card">
+                <div class="card-image">
+                    <img src="./assets/bgimage2.png" alt="">
+                    <span class="feature-tag card-tag">MUSIC</span>
+                </div>
+                <div class="card-info">
+                    <h2 class="card-title">Everything You Wanted to Know About Music Industry and Were Afraid to Ask</h2>
+
+                    <p class="para">
+                        As our group split up and started working on individual designs, I felt like I wasn't ready to begin wireframing. I still hadn't found the heart of the problem.
+                    </p>
+
+                    <a class="btn-link" href="">More <i class="lni lni-arrow-right"></i></a>
+                </div>
+            </div>
+        </div>
+    </main>
 
 </body>
 
