Add - blog cards section in main

--- a/index.html
+++ b/index.html
@@ -76,6 +76,127 @@
                     <a class="btn-link" href="">More <i class="lni lni-arrow-right"></i></a>
                 </div>
             </div>
+
+            <div class="blog-card">
+                <div class="card-image">
+                    <img src="./assets/bgimage3.png" alt="">
+                    <span class="feature-tag card-tag">Technology</span>
+                </div>
+                <div class="card-info">
+                    <h2 class="card-title">What Zombies Can Teach You About Technolgy</h2>
+
+                    <p class="para">
+                        As our group split up and started working on individual designs, I felt like I wasn't ready to begin wireframing. I still hadn't found the heart of the problem.
+                    </p>
+
+                    <a class="btn-link" href="">More <i class="lni lni-arrow-right"></i></a>
+                </div>
+            </div>
+
+            <div class="blog-card">
+                <div class="card-image">
+                    <img src="./assets/bgimage4.png" alt="">
+                    <span class="feature-tag card-tag">Lifestyle</span>
+                </div>
+                <div class="card-info">
+                    <h2 class="card-title">You Don't Have to be a Big Corporation to Start Media</h2>
+
+                    <p class="para">
+                        A Facebook group called Memory People serves as a helpful resource for family members to share thier struggles and ask for advice. I was admitted to the group and would read posts daily.
+                    </p>
+
+                    <a class="btn-link" href="">More <i class="lni lni-arrow-right"></i></a>
+                </div>
+            </div>
+
+            <div class="blog-card">
+                <div class="card-image">
+                    <img src="./assets/bgimage5.png" alt="">
+                    <span class="feature-tag card-tag">Lifestyle</span>
+                </div>
+                <div class="card-info">
+                    <h2 class="card-title">Streamlined Memory Composition Process This Year</h2>
+
+                    <p class="para">
+                        Our research proved that trying to help with medical issues would be beyond our scope of knowledge and better handled by medical professinals.
+                    </p>
+
+                    <a class="btn-link" href="">More <i class="lni lni-arrow-right"></i></a>
+                </div>
+            </div>
+
+            <div class="blog-card">
+                <div class="card-image">
+                    <img src="./assets/bgimage6.png" alt="">
+                    <span class="feature-tag card-tag">Finance</span>
+                </div>
+                <div class="card-info">
+                    <h2 class="card-title">10 Tips to Start Building an Audience you Always Wanted</h2>
+
+                    <p class="para">
+                        Our research proved that trying to help with medical issues would be beyond our scope of knowledge and better handled by medical professinals.
+                    </p>
+
+                    <a class="btn-link" href="">More <i class="lni lni-arrow-right"></i></a>
+                </div>
+            </div>
+
+            <div class="blog-card">
+                <div class="card-image">
+                    <img src="./assets/bgimage7.png" alt="">
+                    <span class="feature-tag card-tag">Music</span>
+                </div>
+                <div class="card-info">
+                    <h2 class="card-title">How I Improved my Health in One Easy Lesson</h2>
+
+                    <p class="para">
+                        Our research proved that trying to help with medical issues would be beyond our scope of knowledge and better handled by medical professinals.
+                    </p>
+
+                    <a class="btn-link" href="">More <i class="lni lni-arrow-right"></i></a>
+                </div>
+            </div>
+
+
+
+            <div class="blog-card">
+                <div class="card-image">
+                    <img src="./assets/bgimage8.png" alt="">
+                    <span class="feature-tag card-tag">Technology</span>
+                </div>
+                <div class="card-info">
+                    <h2 class="card-title">Streamlined Memory Composition Process This Year</h2>
+
+                    <p class="para">
+                        Our research proved that trying to help with medical issues would be beyond our scope of knowledge and better handled by medical professinals.
+                    </p>
+
+                    <a class="btn-link" href="">More <i class="lni lni-arrow-right"></i></a>
+                </div>
+            </div>
+
+
+            <div class="blog-card">
+                <div class="card-image">
+                    <img src="./assets/bgimage9.png" alt="">
+                    <span class="feature-tag card-tag">Lifestyle</span>
+                </div>
+                <div class="card-info">
+                    <h2 class="card-title">Define the Who, What, and Why</h2>
+
+                    <p class="para">
+                        Our research proved that trying to help with medical issues would be beyond our scope of knowledge and better handled by medical professinals.
+                    </p>
+
+                    <a class="btn-link" href="">More <i class="lni lni-arrow-right"></i></a>
+                </div>
+            </div>
+
+
+
+
+
+
         </div>
     </main>
 
