Add - Footer section

--- a/index.html
+++ b/index.html
@@ -202,6 +202,77 @@
         </div>
     </section>
 
+    <footer>
+        <div class="container footer-sec">
+            <div class="footer-left">
+                <ul>
+                    <li><a href="">Publishers</a></li>
+                    <li><a href="">Data Platform</a></li>
+                    <li><a href="">Smart PMPs</a></li>
+                    <li><a href="">Smart OTP</a></li>
+                    <li>Halo</li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <h2 class="footer-header">Insights</h2>
+                    </li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Case Studies</a></li>
+                    <li><a href="">Content Library</a></li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <h2 class="footer-header">Legal</h2>
+                    </li>
+                    <li><a href="">Privacy Policy</a></li>
+                    <li><a href="">Platform Privacy Policy</a></li>
+                    <li><a href="">Terms of Use</a></li>
+                    <li><a href="">Opt-Out</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-right">
+                <ul>
+                    <li><a href="">Advertisers</a></li>
+                    <li><a href="">Data Marketplace</a></li>
+                    <li><a href="">Data Agency</a></li>
+                    <li><a href="">Data Platform</a></li>
+                    <li><a href="">Smart PMP Search</a></li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <h2 class="footer-header">More</h2>
+                    </li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Career</a></li>
+                    <li><a href="">Contact Us</a></li>
+                </ul>
+
+                <div class="footer-address">
+                    <h2 class="footer-header">Address</h2>
+                    <h4 class="footer-header">US</h4>
+
+                    <p>
+                        200 Varick St.
+                        <span>Suite 514</span>
+                        <span>New York, NY 10014</span>
+                    </p>
+
+                    <h4 class="footer-header">UK</h4>
+                    <p>
+                        47 Churchfield Road <span>London, England, UK</span>
+                        <span>W3 6AY</span>
+                    </p>
+                </div>
+
+
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
