Add - Responsiveness for larger devices

--- a/index.html
+++ b/index.html
@@ -17,15 +17,27 @@
                 <img class="logo" src="./assets/logo.png" alt="">
             </div>
             <button class="btn menu"><i class="lni lni-menu"></i></button>
+            <ul class="nav-links d-only">
+                <li><a href="">For Publishers</a></li>
+                <li><a href="">For Advertisers</a></li>
+                <li><a href="">Insights</a></li>
+                <li><a href="">Contact Us</a></li>
+                <li><a class="btn btn-cta" href="">Request Demo</a></li>
+            </ul>
         </div>
     </nav>
 
     <header>
         <div class="container header-sec">
             <h1>Blog</h1>
-            <button class="btn btn-search">
+            <button class="btn btn-search m-only">
                 <i class="lni lni-search-alt icon-search"></i>
             </button>
+
+            <div class="form d-only">
+                <i class="lni lni-search-alt icon-search"></i>
+                <input class="search-field" type="text" placeholder="Search">
+            </div>
         </div>
     </header>
 
@@ -206,6 +218,9 @@
         <div class="container footer-sec">
             <div class="footer-left">
                 <ul>
+                    <li>
+                        <h2 class="footer-header">For Publishers</h2>
+                    </li>
                     <li><a href="">Publishers</a></li>
                     <li><a href="">Data Platform</a></li>
                     <li><a href="">Smart PMPs</a></li>
@@ -235,6 +250,9 @@
 
             <div class="footer-right">
                 <ul>
+                    <li>
+                        <h2 class="footer-header">For Advertisers</h2>
+                    </li>
                     <li><a href="">Advertisers</a></li>
                     <li><a href="">Data Marketplace</a></li>
                     <li><a href="">Data Agency</a></li>
